--- a/benwaonline/gallery/templates/_macros.html
+++ b/benwaonline/gallery/templates/_macros.html
@@ -31,7 +31,7 @@
 {% for post in posts %}
 <span class="thumb">
     <a href="{{ url_for('gallery.show_post', post_id=post.id) }}">
-        <img src = "{{ url_for('static', filename=post.preview.filepath) }}"></a>
+        <img alt="{{ post.title }}" src="{{ url_for('static', filename=post.preview.filepath) }}"></a>
 </span>
 {% endfor %}
 {% endmacro %}
