honestly no reason to name it '_macros'

--- a/benwaonline/gallery/templates/gallery.html
+++ b/benwaonline/gallery/templates/gallery.html
@@ -1,4 +1,4 @@
-{% import '_macros.html' as macros %}
+{% import 'macros.html' as macros %}
 {% extends "gallery_layout.html" %}
 
 {% block tags %}
