--- a/benwaonline/static/style.css
+++ b/benwaonline/static/style.css
@@ -39,18 +39,16 @@ div.maincontainer {
     position: relative;
 }
 
-ul.tags {
+ul {
 	list-style-type: none;
 	margin: 0;
     padding: 0;
 }
 
 ul.navbar {
-	list-style-type: none;
-    margin: 0;
-    padding: 0;
     overflow: hidden;
 }
+
 li.navbar_entry {
 	float: left;
 }
