Big revamp of css, now using grids to lay things out

--- a/benwaonline/auth/templates/login.html
+++ b/benwaonline/auth/templates/login.html
@@ -10,7 +10,7 @@
 
 {% extends "layout.html" %}
 
-{% block body %}
+{% block main %}
 {{ display_faq(entries) }}
 {% with messages = get_flashed_messages() %}
 {% if messages %}
