--- a/benwaonline/userinfo/templates/user.html
+++ b/benwaonline/userinfo/templates/user.html
@@ -10,7 +10,7 @@
 {% endmacro %}
 
 {% extends "layout.html" %}
-{% block body %}
+{% block main %}
 {{ display_user(user) }}
 {{ macros.display_all_posts(user.posts) }}
 {% endblock %}
