--- a/benwaonline/userinfo/templates/users.html
+++ b/benwaonline/userinfo/templates/users.html
@@ -22,7 +22,7 @@
 .users tr:last-child td{ border-bottom:0; }
 .users td { padding:2px 10px; }
 </style>
-{% block body %}
+{% block main %}
 <table class='users'>
     <thead>
         <tr>
