--- a/benwaonline/auth/templates/signup.html
+++ b/benwaonline/auth/templates/signup.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block body %}
+{% block main %}
 {% with messages = get_flashed_messages() %}
 {% if messages %}
   <ul class=flashes>
