--- a/benwaonline/gallery/templates/gallery.html
+++ b/benwaonline/gallery/templates/gallery.html
@@ -1,11 +1,11 @@
 {% import 'macros.html' as macros %}
-{% extends "gallery_layout.html" %}
+{% extends "layout.html" %}
 
-{% block tags %}
+{% block sidebar %}
 all benwa tags
-{{ macros.display_tags(tags)}}
-{% endblock %}
-{% block maincontainer %}
-{{ macros.display_all_posts(posts)}}
+{{ macros.display_tags(tags) }}
 {% endblock %}
 
+{% block main %}
+{{ macros.display_all_posts(posts) }}
+{% endblock %}
