--- a/benwaonline/templates/index.html
+++ b/benwaonline/templates/index.html
@@ -1,4 +1,4 @@
 {% extends "layout.html" %}
-{% block body %}
+{% block main %}
 <img src="{{ url_for('static', filename='under_construction.jpg') }}" alt="benwas at work">
 {% endblock %}
