Redid the gallery css to use gridz

--- a/benwaonline/gallery/templates/gallery.html
+++ b/benwaonline/gallery/templates/gallery.html
@@ -7,5 +7,7 @@ all benwa tags
 {% endblock %}
 
 {% block main %}
+<div class="gallery">
 {{ macros.display_all_posts(posts) }}
+</div>
 {% endblock %}
