--- a/benwaonline/gallery/templates/image_upload.html
+++ b/benwaonline/gallery/templates/image_upload.html
@@ -1,11 +1,17 @@
-{% import '_macros.html' as macros %}
-{% extends "gallery_layout.html" %}
+{% import 'macros.html' as macros %}
+{% extends "layout.html" %}
 
-{% block tags %}
+{% block sidebar %}
 all benwa tags
 {{ macros.display_tags(tags)}}
 {% endblock %}
-{% block maincontainer %}
+{% block main %}
+<style>
+label {
+    vertical-align: top;
+    float: right;
+}
+</style>
 <form method="post" enctype=multipart/form-data action="{{ url_for('gallery.add_post') }}">
     {{ form.csrf_token }}
     <table cellpadding="3" cellspacing="1" border="0" class="layout border slice" width="100%">
