--- a/benwaonline/userinfo/templates/user.html
+++ b/benwaonline/userinfo/templates/user.html
@@ -1,4 +1,4 @@
-{% import '_macros.html' as macros %}
+{% import 'macros.html' as macros %}
 
 {% macro display_user(user) %}
 <ul class=userstats>
@@ -10,7 +10,7 @@
 {% endmacro %}
 
 {% extends "layout.html" %}
-{% block body %}
+{% block main %}
 {{ display_user(user) }}
 {{ macros.display_all_posts(user.posts) }}
 {% endblock %}
