--- a/benwaonline/static/style.css
+++ b/benwaonline/static/style.css
@@ -1,84 +1,51 @@
-body            { font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif; background: #eee; }
-a, h1, h2       { color: #377ba8; }
-h1, h2          { font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif; margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
-h2              { font-size: 1.2em; }
-
-.entries        { list-style: none; margin: 0; padding: 0; }
-.entries li     { margin: 0.8em 1.2em; }
-.entries li h2  { margin-left: -1em; }
-.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
-.add-entry dl   { font-weight: bold; }
-.metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
-                  margin-bottom: 1em; background: #fafafa; }
-.flash          { background: #cee5F5; padding: 0.5em;
-                  border: 1px solid #aacbe2; }
-.error          { background: #f0d6d6; padding: 0.5em; }
-
-.left { float: left; }
-.right{ float: right; }
-
-.comments { list-style: none outside; }
-
-span.thumb {
-	height: 170px;
-	width:160px;
-	display:inline-block;
-	text-align:center;
-	vertical-align:middle;
+body {
+    font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
+    background: #eee;
 }
 
-span.thumb img{
-	display:block;
-	margin-left:auto;
-	margin-right:auto;
+a, h1, h2 {
+    color: #377ba8;
 }
 
-.tags {
-	width: 175px;
-    position: fixed;
-    height: 100%;
+h1, h2 {
+    margin: 0;
 }
 
-.maincontainer {
-    width: calc(100% - 175px);
-    left: 175px;
-    height: calc(100% + 50px);
-    float: left;
-    position: relative;
+h1 {
+    border-bottom: 2px solid #eee;
 }
 
-ul.tags {
+h2 {
+    font-size: 1.2em;
+}
+
+ul {
 	list-style-type: none;
 	margin: 0;
     padding: 0;
 }
 
-ul.navbar {
-	list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-li.navbar_entry {
-	float: left;
+.error {
+    background: #f0d6d6;
+    padding: 0.5em;
 }
 
-li.navbar_entry a {
-	display: block;
-    text-align: center;
-    padding: 10px 5px;
-    text-decoration: none;
+.header {
+    grid-area: header;
 }
 
-.users { border-radius:8px; }
-.users th { padding: 2px 10px; }
-.users tr:last-child td{ border-bottom:0; }
-.users td { padding:2px 10px; }
-.users-odd	{ background-color:transparent; }
-.users-odd td	{ border-top:none; border-bottom:none; }
+.sidebar {
+    grid-area: sidebar;
+}
 
+.main {
+    grid-area: main;
+}
 
-td.label {
-	vertical-align: top;
+.wrapper {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    grid-template-areas:
+    "header header"
+    "sidebar main";
 }
