--- a/benwaonline/templates/layout.html
+++ b/benwaonline/templates/layout.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html lang="en">
 <title>Benwa Online</title>
 {% assets "css_min" %}
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='min_style.css') }}">
@@ -27,3 +28,4 @@
 <div class='box sidebar'>{% block sidebar %}{% endblock %}</div>
 <div class='box main'>{% block main %}{% endblock %}</div>
 </div>
+</html>
