--- a/benwaonline/static/style.css
+++ b/benwaonline/static/style.css
@@ -1,22 +1,20 @@
 body {
     font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
-    background: #eee;
+    background: #DCDCDC;
 }
 
-a, h1, h2 {
-    color: #377ba8;
-}
-
-h1, h2 {
-    margin: 0;
+a {
+    color: #43039A;
 }
 
 h1 {
-    border-bottom: 2px solid #eee;
+    margin: 0;
+    color: #43039A;
 }
 
 h2 {
-    font-size: 1.2em;
+    margin: 0;
+    color: #43039A;
 }
 
 ul {
@@ -43,9 +41,7 @@ ul {
 }
 
 .wrapper {
-    display: grid;
     grid-template-columns: 200px 1fr;
-    grid-template-areas:
-    "header header"
-    "sidebar main";
+    grid-template-areas: "header header" "sidebar main";
+    display: grid;
 }
