--- a/benwaonline/templates/layout.html
+++ b/benwaonline/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <title>Benwa Online</title>
 {% assets "css_min" %}
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='min_style.css') }}">
+<link rel=stylesheet type=text/css href="{{ ASSET_URL }}">
 {% endassets %}
 <style>
 .navbar_entry {margin: 5px;}
