--- a/benwaonline/userinfo/templates/user.html
+++ b/benwaonline/userinfo/templates/user.html
@@ -5,9 +5,9 @@
     <li>Username: {{ user.username }}</li>
     <li>Comments: <a href="{{ url_for('userinfo.show_comments', user_id=user.id )}}">{{ user.comments|length}}</a></li>
     <li>Benwa?: probably not </li>
-    <li>Recent Posts: <a href="{{ url_for('userinfo.show_posts', user_id=user.id )}}">{{ user.posts|length}}</a></li>
+    <li>Recent Posts: <a href="{{ url_for('userinfo.show_posts', user_id=user.id )}}">All</a></li>
      {{ macros.display_all_posts(user.posts) }}
-    <li>Recently they LOVE these benwa: <a href="{{ url_for('userinfo.show_likes', user_id=user.id )}}">{{ user.likes|length}}</a></li>
+    <li>Recently they LOVE these benwa: <a href="{{ url_for('userinfo.show_likes', user_id=user.id )}}">All</a></li>
      {{ macros.display_all_posts(user.likes) }}
 </ul>
 {% endmacro %}
