fixed the search bar and stylized the front page

--- a/benwaonline/static/style.css
+++ b/benwaonline/static/style.css
@@ -1,4 +1,4 @@
-body {
+body,div,h1,h2,h3,h4,h5,h6,p,ul,li,dd,dt {
     font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
     background: #DCDCDC;
 }
