--- a/benwaonline/front/templates/front.html
+++ b/benwaonline/front/templates/front.html
@@ -51,7 +51,7 @@ div#main {
             <a href="{{ url_for('authbp.authorize_info') }}">login/signup</a>
             <a href="{{ url_for('gallery.show_posts') }}">benwas</a>
             <a href="#comments">comments</a>
-            <a href="#tags">tags</a>
+            <a href="{{ url_for('tags.show_tags') }}">tags</a>
             <a href="#sitemap">>></a>
         </div>
         <div class='search'>
