--- a/benwaonline/templates/layout.html
+++ b/benwaonline/templates/layout.html
@@ -14,6 +14,7 @@
         <div><h1>Benwa <i>Online</i></h1></div>
         <div class='navbar_entry'><a href="{{ url_for('gallery.show_posts') }}">benwas</a></div>
         <div class="navbar_entry"><a href="{{ url_for('tags.show_tags') }}">tags</a></div>
+        <div class="navbar_entry"><a href="{{ url_for('comments.show_comments') }}">comments</a></div>
         <div class='navbar_entry'><a href="{{ url_for('userinfo.show_users') }}">benwusers</a></div>
         <div class='navbar_entry'><a href="{{ url_for('front.faq') }}">fab</a></div>
         <div class="filler"></div>
