--- a/benwaonline/front/templates/front.html
+++ b/benwaonline/front/templates/front.html
@@ -11,11 +11,9 @@ body {
     background-attachment: fixed;
     background-position: 50% 0%;
     background-repeat: no-repeat;
-    background-image:url({{ url_for('static', filename=bg_img)}});
 }
 
 div#main {
-    background: transparent;
     text-align: center;
     position: absolute;
     top: 28em;
@@ -45,8 +43,8 @@ div#main {
     font-size: 80%;
 }
 </style>
-<body style>
-<div id='main'>
+<body style="background-image:url({{ url_for('static', filename=bg_img)}})">
+<div id='main' style='background: transparent'>
     <div id='frontbox1' class="frontbox">
         <h1>Benwa <i>Online</i></h1>
         <div class='links'>
