--- a/benwaonline/front/templates/front.html
+++ b/benwaonline/front/templates/front.html
@@ -68,15 +68,15 @@ div#main {
     </div>
 
     <div id='frontbox2' class="frontbox">
-        <h2>number of benwas</h1>
+        <h2>{{ post_count }}</h1>
     </div>
 
     <div id='frontbox3' class="frontbox">
         <p>
-            number of bewna here <br>
-            <a href="#takedown">takedown</a>
-            <a href="#contact">contact</a>
-            <a href="#tos">terms of service</a>
+            {{ post_count }} benwas <br>
+            <a href="{{ url_for('front.takedown') }}">takedown</a>
+            <a href="{{ url_for('front.contact') }}">contact</a>
+            <a href="{{ url_for('front.tos') }}">terms of service</a>
         </p>
     </div>
 
