--- a/benwaonline/templates/layout.html
+++ b/benwaonline/templates/layout.html
@@ -26,9 +26,7 @@
 <div class='box sidebar'>{% block sidebar %}{% endblock %}</div>
 <div class='box main'>{% block main %}{% endblock %}</div>
 </div>
-{% assets "jquery" %}
-<script src="{{ ASSET_URL }}"></script>
-{% endassets %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 {% block scripts %}{% endblock %}
 </html>
 {% endblock %}
