--- a/benwaonline/userinfo/templates/user.html
+++ b/benwaonline/userinfo/templates/user.html
@@ -6,9 +6,9 @@
     <li>Comments: <a href="{{ url_for('userinfo.show_comments', user_id=user.id )}}">{{ user.comments|length}}</a></li>
     <li>Benwa?: probably not </li>
     <li>Recent Posts: <a href="{{ url_for('userinfo.show_posts', user_id=user.id )}}">All - {{ user.posts|length}}</a></li>
-     {{ macros.display_all_posts(user.posts) }}
+     {{ macros.display_all_posts(posts) }}
     <li>Recently they LOVE these benwa: <a href="{{ url_for('userinfo.show_likes', user_id=user.id )}}">All - {{ user.likes|length}}</a></li>
-     {{ macros.display_all_posts(user.likes) }}
+     {{ macros.display_all_posts(likes) }}
 </ul>
 {% endmacro %}
 
