--- a/benwaonline/front/templates/takedown.html
+++ b/benwaonline/front/templates/takedown.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block main %}
+{% block content %}
 <h1>CURRENTLY ONLY BENWA HIMSELF MAY TAKEDOWN A BENWA</h1>
 <br><br>
 but if its super important you probably know how to get in touch
