--- a/benwaonline/templates/layout_no_sidebar.html
+++ b/benwaonline/templates/layout_no_sidebar.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block atf %}
-<div class='l-wrapper'>
+<div class='l-wrapper-no-sidebar'>
 {% include 'navbar.html' %}
-{% block sidebar %}{% endblock %}
 {% block content %}{% endblock %}
 </div>
 
