--- a/benwaonline/templates/request_error.html
+++ b/benwaonline/templates/request_error.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block main %}
+{% block content %}
 <p style="text-align:center;">
     {{ error.title }}<br>{{ error.detail }}
     <br>Please contact the Admin.
