--- a/benwaonline/templates/base.html
+++ b/benwaonline/templates/base.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <!-- Suppress browser request for favicon.ico -->
-        <link rel="shortcut icon"type="image/x-icon" href="data:image/x-icon;,">
-        {% assets "favicon" %}
-        <script src="{{ ASSET_URL }}"></script>
-        {% endassets %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <!-- Suppress browser request for favicon.ico -->
+    <link rel="shortcut icon"type="image/x-icon" href="data:image/x-icon;,">
+    {% assets "favicon" %}
+    <script src="{{ ASSET_URL }}"></script>
+    {% endassets %}
     </head>
 <title>Benwa Online</title>
 {% assets "css_min" %}
@@ -14,3 +15,4 @@
 {% endassets %}
 
 {% block atf %}{% endblock %}
+</html>
